--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="home-text">
             <h1>Hello there I'm <span><br>Vividh Pandey</span></h1>
             <h2>Tech Enthusiast</h2>
-            <p>Recently just finished my class 12th and just opted for Btech in Computer Science Engineering with Specialization in Cyber Security <br>@SRMIST, KTR Campus</p>
+            <p>Undergraduate Freshman for Btech in Computer Science Engineering with Specialization in Cyber Security <br>@SRMIST, KTR Campus</p>
         </div>
     </section>
     
