--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="about-text">
             <h2 class="ac">About </h2>
             <h1>Coder Turtle</h1>
-            <p>The main and final goal for all such hustles is GROWTH. I want to learn so that I can grow, making this website is also a part of growing. The keyword "Web Development" sounds exciting in itself and all these softwares is the cherry on the cake....</p>
+            <p>A passionate Undergraduate Developer looking forward to contribute to Open Source.</p>
             <p>The whole procedure of first installing VS Code then recalling the basics of HTML. Learning about how to give the colour. Ah! CSS is the key. All this is different and new but exciting. I want this rush to be constant. </p>
             
         </div>
