--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <div class="about-text">
             <h2 class="ac">About </h2>
             <h1>Coder Turtle</h1>
-            <p>A passionate Undergraduate Developer looking forward to contribute to Open Source.</p>
-            <p>The whole procedure of first installing VS Code then recalling the basics of HTML. Learning about how to give the colour. Ah! CSS is the key. All this is different and new but exciting. I want this rush to be constant. </p>
+            <p>A passionate Undergraduate Developer looking forward to contribute to Open Source.<br>Currently learning Web Development. </p>
             
         </div>
     </section>
@@ -54,12 +53,12 @@
             <div class="skills-bars">
                 <div class="skills-text">
                     <h2>My Skills</h2>
-                    <p>1) Building Arduino Projects<br>2) Home automation Projects<br>3) Basic Raspberry pi Projects<br>4) Video editing and Photography</p>
+                    <p>1) Building Arduino Projects<br>2) Home automation Projects<br>3) Basic Raspberry pi Projects<br>4)Web Development <br> 5)Video editing and Photography</p>
 
                 </div>
                 <div class="skills-box">
                    <h3>Arduino</h3>
-                    <span>70%</span>
+                    <span>60%</span>
                     <div class="percent-bar html-bar"></div>
                 </div>
                 <div class="skills-box">
@@ -70,6 +69,11 @@
                 <div class="skills-box">
                     <h3>Java</h3>
                     <span>30%</span>
+                    <div class="percent-bar js-bar"></div>
+                </div>
+                <div class="skills-box">
+                    <h3>Frontend Web Development</h3>
+                    <span>10%</span>
                     <div class="percent-bar js-bar"></div>
                 </div>
                 <div class="skills-box">
